--- a/src/app/routes/cards/thank/thank.component.html
+++ b/src/app/routes/cards/thank/thank.component.html
@@ -4,7 +4,7 @@
     {{'card.thank.result' | translate}}
   </p>
   <p class="thanks__subtitle">
-  {{'card.thank.title.0' | translate}} <a href="https://petabencana.id">Petabencana.id</a> {{'card.thank.title.1' | translate}}
+  {{'card.thank.title.0' | translate}} <a href="https://floodmanage.smartinfrastructuredashboard.org" target="_blank">https://floodmanage.smartinfrastructuredashboard.org</a> {{'card.thank.title.1' | translate}}
   </p>
 
   <p *ngIf="isShowReportAgain" class="thanks__again">
